# autogen-fastapi-postgres

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agentchat_chainlit/: README.md
agentchat_fastapi/: .env  CHANGELOG.md  README.md  __init__.py  alembic.ini  app_agent.py  init_db.py  main.py
agentchat_fastapi/alembic/: env.py
agentchat_fastapi/api/: __init__.py  database.py  legacy_routes.py  models.py  routes.py  services.py
agentchat_fastapi/docs/: api_design.md  architecture.md  data_flow.md  database_design.md  index.md  quick_start.md
agentchat_fastapi/example/: __init__.py  app.py  app_agent.html
agentchat_streamlit/: README.md  agent.py  main.py  model_config.template.yaml
autogen-bi-agent/: .env.example  CHANGELOG.md  GUIDE.md  README.md  main.py  manifest.yaml  requirements.txt
autogen-bi-agent/provider/: autogen_bi_agent.yaml
autogen-bi-agent/strategies/: autogen_bi_agent.py  autogen_bi_agent.yaml
autogen-graphflow/: GraphFlow-流程图.md  README.md  parallel_flow.py  sequential_flow.py  travel_agent.py
autogenchat_bi/: CHANGELOG.md  README.md  __init__.py  bi_agent.py  date_parser.py  example.py
autogenchat_bi/core/: bi_orchestrator.py  collector_agent.py  intent_agent.py
autogenchat_bi/examples/: async_example.py  direct_openai_example.py  project_extractor_example.py  run_bi_agent.py  target_extractor_example.py
autogenchat_bi/utils/: date_parser.py  project_extractor.py  target_extractor.py
core_semantic_router/: README.md
core_semantic_router/docs/: API接口设计.md  流程图.md  (+7 more)
docs/: autogen_architecture.md
(+3 files in other folders)
