[project]
name = "autogen-fastapi-postgres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-core",
    "autogen_agentchat",
    "autogen-ext",
    "fastapi",
    "uvicorn",
    "PyYAML",
    "streamlit",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary",
    "alembic",
    "asyncpg",
    "greenlet",
    "python-dotenv"
]

[tool.alembic]
script_location = "alembic"
